# CorporaCreator

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
corpora/cy/: dev.tsv  invalid.tsv  other.tsv  test.tsv  train.tsv
docs/: Makefile  conf.py  index.rst
src/corporacreator/: __init__.py  argparse.py  corpora.py  corpus.py  creator.py  logging.py  resources.py  skeleton.py  statistics.py  tool.py  utils.py
src/corporacreator/preprocessors/: __init__.py  br.py  ca.py  cnh.py  common.py  cv.py  cy.py  de.py  en.py  eo.py  es.py  et.py  eu.py  fa.py  fr.py  gaIE.py  it.py  kab.py  ky.py  lv.py  nl.py  sl.py  tr.py  tt.py  zhTW.py
src/corporacreator/preprocessors/kab/: text_cleaning.py
tests/: conftest.py  test_argparse.py  test_corpora.py  test_corpus.py  test_logging.py  test_preprocessors.py  test_skeleton.py  test_tool.py
